--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -19,6 +19,12 @@
     <link rel="stylesheet" href="{% static 'style.css' %}">
   </head>
   <body>
+    <!--HERE BE NAVBAR-->
+    <nav class="navbar fixed-top navbar-expand-md color-2" id="navbar">
+      <div class="container" id="navbar-drop">
+        {% include 'navbar.html' %}
+      </div>
+    </nav>
     <!-- MAIN CONTENT -->
     <div id="main-wrapper">
       <div class="container-fluid sticky-top extended" id="flap">
@@ -33,6 +39,23 @@
       </div>
       <!-- MAIN -->
       <div class="container"id="main">
+        {% if search.podcasts1 %}
+        <div class="row collapse show" id="browse-collapse">
+        {% else %}
+        <div class="row collapse" id="browse-collapse">
+        {% endif %}
+          <div class="col">
+            <div class="alphabet-group alphabet-buttons">
+              {% for letter in alphabet %}
+              <a class="btn btn-dope alphabet-button" href="/browse/?q={{ letter }}" id="alphabet-{{ letter }}">
+                <span>
+                  {{ letter }}
+                </span>
+              </a>
+              {% endfor %}
+            </div>
+          </div>
+        </div>
         <div class="row" id="episodes">
           {% if episodes %}
             {% with episodes as results %}
