--- a/index/templates/multibar.html
+++ b/index/templates/multibar.html
@@ -1,75 +1,47 @@
 <div class="container" id="multibar">
   <div class="row">
-    <div class="col" id="multibar-nav">
-      <a class="nav-link-dope d-inline d-md-none" href="#" id="navbar-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        <i class="fas fa-bars icon"></i>
-      </a>
-      <div class="dropdown-menu navbar-dropdown color-2-trans" aria-labelledby="navbar-dropdown">
-        <a class="nav-link-dope index-link" href="/">
-          Dashboard
-        </a>
-        <!-- <a class="nav-link-dope blog-link" href="#">
-          Blog
-        </a> -->
-        <a class="nav-link-dope browse-link" href="{% url 'browse' %}">
-          Browse
-        </a>
-        {% if user.is_authenticated %}
-          <a class="nav-link-dope subscriptions-link" href="{% url 'subscriptions' %}">
-            Subscriptions
-          </a>
-          <a class="nav-link-dope settings-link" href="{% url 'settings' %}">
-            Settings
-          </a>
-        {% endif %}
-      </div>
-      <a class="nav-link-dope index-link d-none d-md-inline" href="/">
-        Dashboard
+
+    <div class="col-2 col-lg-4" id="multibar-nav">
+      <a class="nav-link-dope d-inline d-lg-none multibar-options-toggle toggle" href="#multibar-options-collapse" data-toggle="collapse" aria-expanded="true" aria-controls="multibar-options-collapse">
+        <i class="fab fa-youtube"></i>
       </a>
       <!-- <a class="nav-link-dope blog-link d-none d-md-inline" href="#">
-        Blog
-      </a> -->
-      <a class="nav-link-dope browse-link d-none d-md-inline" href="{% url 'browse' %}">
-        Browse
-      </a>
-      {% if user.is_authenticated %}
-        <a class="nav-link-dope subscriptions-link d-none d-md-inline" href="{% url 'subscriptions' %}">
-          Subscriptions
-        </a>
-        <a class="nav-link-dope settings-link d-none d-md-inline" href="{% url 'settings' %}">
-          Settings
-        </a>
-        <form class="logout-form" method="POST" action="{% url 'logout' %}">
-          {% csrf_token %}
-          <button class="nav-link-dope ajax-logout d-inline d-md-none" type="submit">
-            <i class="fas fa-sign-out-alt icon"></i>
-          </button>
-          <button class="nav-link-dope ajax-logout d-none d-md-inline" type="submit">
-            Logout
-          </button>
-        </form>
-      {% else %}
-        <a class="nav-link-dope ajax-login d-none d-md-inline" href="/">
-          Login
-        </a>
-        <a class="nav-link-dope ajax-signup d-none d-md-inline" href="/?view=signup">
-          Signup
-        </a>
-        <a class="nav-link-dope ajax-login d-inline d-md-none" href="/">
-          <i class="fas fa-sign-in-alt icon"></i>
-        </a>
-      {% endif %}
-    </div>
-    <div class="col-auto" id="multibar-search">
-      {% if podcasts1 %}
-        <a class="btn btn-dope active toggle browse-toggle" href="{% url 'browse' %}" data-toggle="collapse" data-target="#browse-collapse" aria-expanded="true" aria-controls="browse-collapse">
-          A-Z
-        </a>
-      {% else %}
-        <a class="btn btn-dope active toggle browse-toggle" href="{% url 'browse' %}" data-toggle="collapse" data-target="#browse-collapse" aria-expanded="false" aria-controls="browse-collapse">
-          A-Z
-        </a>
-      {% endif %}
+      Blog
+    </a> -->
+    <a class="nav-link-dope browse-link d-none d-lg-inline" href="{% url 'browse' %}">
+      Browse
+    </a>
+    <a class="nav-link-dope charts-link d-none d-lg-inline" href="{% url 'charts' %}">
+      Charts
+    </a>
+    {% if user.is_authenticated %}
+    <a class="nav-link-dope index-link d-none d-lg-inline" href="/">
+      Dashboard
+    </a>
+    <a class="nav-link-dope subscriptions-link d-none d-lg-inline" href="{% url 'subscriptions' %}">
+      Subscriptions
+    </a>
+    <a class="nav-link-dope settings-link d-none d-lg-inline" href="{% url 'settings' %}">
+      Settings
+    </a>
+    <form class="logout-form" method="POST" action="{% url 'logout' %}">
+      {% csrf_token %}
+      <button class="nav-link-dope ajax-logout d-none d-lg-inline" type="submit">
+        Logout
+      </button>
+    </form>
+    {% else %}
+    <a class="nav-link-dope ajax-login d-none d-lg-inline" href="/">
+      Login
+    </a>
+    <a class="nav-link-dope ajax-signup d-none d-lg-inline" href="/?view=signup">
+      Signup
+    </a>
+    {% endif %}
+  </div>
+    <div class="col-lg-4 d-none d-lg-block" id="multibar-c">
+  </div>
+    <div class="col-10 col-lg-4" id="multibar-search">
       <form class="form-inline" id="search-form" method="GET" action="{% url 'search' %}">
         <div class="input-group" id="search-field">
           <label for="q" class="sr-only">Search</label>
@@ -93,19 +65,42 @@
       </form>
     </div>
   </div>
-  <!-- BROWSE BAR -->
-  {% if search.podcasts1 %}
-  <div class="row collapse show" id="browse-collapse">
-  {% else %}
-  <div class="row collapse" id="browse-collapse">
-  {% endif %}
+  <div class="row collapse show" id="multibar-options-collapse">
     <div class="col">
-      <div class="alphabet-group alphabet-buttons">
-        {% for letter in alphabet %}
-          <a class="btn btn-dope alphabet-button" href="/browse/?q={{ letter }}" id="alphabet-{{ letter }}">
-            {{ letter }}
+      <div class="nav-group">
+        <!-- <a class="nav-link-dope blog-link" href="#">
+          Blog
+        </a> -->
+        <a class="nav-link-dope browse-link" href="{% url 'browse' %}">
+          Browse
+        </a>
+        <a class="nav-link-dope charts-link" href="{% url 'browse' %}">
+          Charts
+        </a>
+        {% if user.is_authenticated %}
+          <a class="nav-link-dope index-link" href="/">
+            Dashboard
           </a>
-        {% endfor %}
+          <a class="nav-link-dope subscriptions-link" href="{% url 'subscriptions' %}">
+            Subscriptions
+          </a>
+          <a class="nav-link-dope settings-link" href="{% url 'settings' %}">
+            Settings
+          </a>
+          <form class="logout-form" method="POST" action="{% url 'logout' %}">
+            {% csrf_token %}
+            <button class="nav-link-dope ajax-logout" type="submit">
+              Logout
+            </button>
+          </form>
+        {% else %}
+          <a class="nav-link-dope ajax-login" href="/">
+            Login
+          </a>
+          <a class="nav-link-dope ajax-signup" href="/?view=signup">
+            Signup
+          </a>
+        {% endif %}
       </div>
     </div>
   </div>
